Fix weekview entries text overflowing

--- a/src/main/resources/org/openjfx/WeekView.css
+++ b/src/main/resources/org/openjfx/WeekView.css
@@ -1,5 +1,6 @@
 /**
  * @author Ayman Abu Awad
+ * @editor Kamal (added css for label and grid lines) 
  */
 
 #mainPanel{
@@ -14,10 +15,16 @@
     -fx-text-fill: red;
     align-self: center;
     -fx-min-height: 30 ;
-    -fx-gridLinesVisible: ture;
 }
 
+.myGridStyle Line {
+    -fx-stroke: black;
+    -fx-stroke-width: 10.0;
+}
 
+.label {
+    -fx-max-width: 75;
+}
 #Month_Year{
 
     -fx-font-weight: bolder;
